token issuing success

--- a/FlashOrder/appsettings.json
+++ b/FlashOrder/appsettings.json
@@ -9,5 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Key": "DanielFkasem48IsSpectrumNotADragon",
+    "Issuer": "www.SmartRecipes.net",
+    "TokenExpirationDuration": 77777777
+  }
 }
