--- a/FlashOrder/appsettings.json
+++ b/FlashOrder/appsettings.json
@@ -14,5 +14,12 @@
     "Key": "DanielFkasem48IsSpectrumNotADragon",
     "Issuer": "www.SmartRecipes.net",
     "TokenExpirationDuration": 77777777
+  },
+  "MailSettings": {
+    "Mail": "k1999daniel@gmail.com",
+    "DisplayName": "Smart Recipes",
+    "Password": "YourPassword",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
