--- a/FlashOrder/FlashOrder.csproj
+++ b/FlashOrder/FlashOrder.csproj
@@ -17,6 +17,7 @@
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.7" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+        <PackageReference Include="NETCore.MailKit" Version="2.0.3" />
         <PackageReference Include="Serilog.AspNetCore" Version="4.1.1-dev-00229" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
@@ -24,6 +25,7 @@
     <ItemGroup>
       <Folder Include="Migrations" />
       <Folder Include="Resources\Images" />
+      <Folder Include="wwwroot\EmailTemplates" />
       <Folder Include="wwwroot\images" />
     </ItemGroup>
 
